# arbitration

./: .gitignore  README.md  index.html  manifest.json  ngrok.config.yaml.example  package.json  tsconfig.json
.cursor/rules/: ask-permission.mdc  global.yaml
.github/workflows/: ci.yaml  deploy.yaml  depoy_arbs.yaml  sportdata_token_refresh.yaml
arb-dev-proxy/: package-lock.json  package.json  wrangler.jsonc
arb-dev-proxy/src/: index.ts
arb-py/: README.md  SPORTDATA_BOT.md  accounts.csv  bot.py  main.py  pyproject.toml
arb-rs/: Cargo.toml  config.toml  rust-toolchain.toml  sysg.config.yaml
arb-rs/data/: README.md  README_v2.md
arb-rs/data/mlb/2026/: teams.json
arb-rs/data/nba/2026/: headshots.json
arb-rs/data/nfl/2025/: headshots.json  play-by-play.json  teams.json
arb-rs/data/nhl/2026/: headshots.json  schedule.json  teams.json
arb-rs/src/: api_paths.rs  cache.rs  config.rs  data_loader.rs  error.rs  lib.rs  main.rs  path.rs  server.rs  uses.rs  zero_copy.rs
arb-rs/src/schema/: data_type.rs  league_response.rs  mod.rs
arb-rs/src/schema/golf/: mod.rs
arb-rs/src/schema/mlb/: box_score.rs  game_by_date.rs  mod.rs  odds.rs  play_by_play.rs  schedule.rs  stadiums.rs  standings.rs  teams.rs
arb-rs/src/schema/nba/: box_score.rs  mod.rs  play_by_play.rs  schedule.rs  stadiums.rs  teams.rs
arb-rs/src/schema/nfl/: box_score.rs  game_by_date.rs  headshots.rs  mod.rs  play_by_play.rs  schedule.rs  scores.rs  stadiums.rs  standings.rs  teams.rs
arb-rs/src/schema/nhl/: headshots.rs  mod.rs  schedule.rs  stadiums.rs  teams.rs
arb-rs/src/schema/reddit/: game_thread.rs  mod.rs
arb-rs/src/schema/rolling_insights/: data_type.rs  league_response.rs  mod.rs
arb-rs/src/schema/rolling_insights/nba/: box_score.rs  mod.rs  player_profile.rs  schedule.rs  teams.rs
arb-rs/src/schema/soccer/: mod.rs
arb-rs/src/schema/sportradar/: data_type.rs  league_response.rs  mod.rs
arb-rs/src/schema/sportradar/mlb/: box_score.rs  game_by_date.rs  headshots.rs  odds.rs  schedule.rs  stadiums.rs  teams.rs
arb-rs/src/schema/sportradar/nba/: box_score.rs  headshots.rs  mod.rs  play_by_play.rs  standings.rs  teams.rs
arb-rs/src/schema/sportradar/nfl/: headshots.rs  mod.rs  play_by_play.rs  schedule.rs  teams.rs
arb-rs/src/schema/sportradar/nhl/: game_by_date.rs  schedule.rs  teams.rs
arb-rs/src/schema/twitterapi/: tweet.rs
arb-rs/src/services/: auth.rs
arb-rs/src/uses/: mod.rs  rolling_insights.rs  sportradar.rs
arb-rs/tests/: integration_tests.rs
arb-www/: App.tsx  eslint.config.js  index.html  manifest.json  package.json  theme.ts  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
arb-www/src/: config.ts  main.tsx  router.tsx  teams.ts  utils.ts  utils.tsx
arbitration/: ContentView.swift  Item.swift  arbitrationApp.swift
arbitration.xcodeproj/: project.pbxproj
arbitrationTests/: arbitrationTests.swift
arbitrationUITests/: arbitrationUITests.swift  arbitrationUITestsLaunchTests.swift
docs/: CURSOR_RULES.md  README.md  THEME_GUIDE.md
etc/database/: schema_sql.tsx
etc/schema/: v1.sql
scripts/: LETS_ENCRYPT_NGINX_SETUP.md  ec.sh  get-env.sh  kick-api.sh  subreddits.bash
src/: main.tsx  router.tsx  utils.tsx
src/components/: AppLayout.tsx  Apple.tsx  AppleSignInScreen.tsx  BetSection.tsx  (+25 more)
sys/: LETS_ENCRYPT_NGINX_SETUP.md  ec.sh
(+231 files in other folders)
