[package]
name = "arb-rs"
version = "0.1.0"
edition = "2021"
authors = ["Rashad rashad@stonehedgelabs.com>"]
description = "Arbitration proxy server for sports data API"
license = "MIT"
repository = "https://github.com/rashad/arbitration"
homepage = "https://github.com/rashad/arbitration"
documentation = "https://github.com/rashad/arbitration"
keywords = ["sports", "api", "proxy", "cache", "redis"]
categories = ["web-programming", "api-bindings"]

[rust-version]
version = "1.90"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
redis = { version = "0.32", features = ["tokio-comp"] }
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
url = "2.5"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
