[package]
name = "arb-rs"
version = "0.1.0"
edition = "2021"
authors = ["Rashad rashad@stonehedgelabs.com>"]
description = "Arbitration proxy server for sports data API"
license = "MIT"
repository = "https://github.com/rashad/arbitration"
homepage = "https://github.com/rashad/arbitration"
documentation = "https://github.com/rashad/arbitration"
keywords = ["sports", "api", "proxy", "cache", "redis"]
categories = ["web-programming", "api-bindings"]

# Removed rust-version as it's not needed for this project

[dependencies]
anyhow = "1.0"
async-std = "1.12"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
jsonwebtoken = "9.3"
rand = "0.8"
redis = { version = "0.32", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
simd-json = { version = "0.13", features = ["serde", "alloc"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
async-std = "1.12"
axum-test = "18.1"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
